# velocity

./: .gitignore  Cargo.toml  LICENSE  Notes.md  README.md  Untitled  build-instructions.md
src/: constants.rs  main.rs  process.rs
velocity-core/: Cargo.toml
velocity-core/src/: constants.rs  lib.rs  tty.rs
velocity-core/src/escape_sequence/: mod.rs  parser.rs  sequence.rs
velocity-core/src/shell_layer/: linux.rs  mac_os.rs  mod.rs
velocity-core/src/text_styles/: decorated_char.rs  mod.rs  text_style.rs
velocity-sdl/: Cargo.toml
velocity-sdl/src/: colours.rs  main.rs
velocity-sfml/: Cargo.toml
velocity-sfml/src/: colours.rs  main.rs
