[package]
name = "velocity-core"
version = "0.1.0"
authors = ["Adam Soutar <me@aso.sh>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.144"
nix = "0.26.2"
openpty = "0.2.0"
num = "0.4.0"
num-traits = "0.2"
num-derive = "0.3"
# By default this includes a "web" feature that brings the entirety of wasm-bindgen with it
whoami = { version =  "1.4.0", default-features = false }
